# beautician

./: Cargo.toml  LICENSE  README.md  index.html  search-index.js
beautician/: fn.escape_bytes.html  fn.escape_str.html  fn.prettify.html  index.html  sidebar-items.js  struct.Prettifier.html
rustc_serialize/json/: struct.Parser.html
src/: lib.rs
src/beautician/src/: lib.rs.html
